Train and Evaluate

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,6 +177,69 @@
     "model = build_model()\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training the Model.\n",
+    ">We feed the training data into the model, allowing it to learn from the images and their labels. We also validate the model's performance with test data during training to monitor its progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/6\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 59ms/step - accuracy: 0.7661 - loss: 0.7172 - val_accuracy: 0.9808 - val_loss: 0.0677\n",
+      "Epoch 2/6\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m46s\u001b[0m 61ms/step - accuracy: 0.9638 - loss: 0.1267 - val_accuracy: 0.9852 - val_loss: 0.0514\n",
+      "Epoch 3/6\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m85s\u001b[0m 65ms/step - accuracy: 0.9746 - loss: 0.0894 - val_accuracy: 0.9855 - val_loss: 0.0506\n",
+      "Epoch 4/6\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 64ms/step - accuracy: 0.9804 - loss: 0.0673 - val_accuracy: 0.9877 - val_loss: 0.0431\n",
+      "Epoch 5/6\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 69ms/step - accuracy: 0.9833 - loss: 0.0565 - val_accuracy: 0.9877 - val_loss: 0.0448\n",
+      "Epoch 6/6\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m74s\u001b[0m 58ms/step - accuracy: 0.9871 - loss: 0.0445 - val_accuracy: 0.9908 - val_loss: 0.0364\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(X_train, y_train, epochs=6, batch_size=64 ,validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluation of the Model\n",
+    "> We test the model with unseen data, to test  its accuracy and how well it performs with new data(new images)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 13ms/step - accuracy: 0.9891 - loss: 0.0334\n",
+      "Test accuracy: 99.19999837875366\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
+    "print('Test accuracy:', (test_acc)*100)"
+   ]
   }
  ],
  "metadata": {
